# nlp-service

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
api/: main.py
docs/assets/: architecture.html
src/nlpsvc/: __init__.py  benchmark.py  config.py  data.py  llm.py  model.py
tests/: test_nlpsvc.py
