[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nlpsvc"
version = "0.1.0"
description = "A fine-tuned text classifier served as an API, benchmarked against an LLM zero-shot baseline on accuracy, latency, and cost — the case for a small specialized model."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["nlp", "text-classification", "fine-tuning", "model-serving", "llm-vs-classifier", "claude", "scikit-learn"]
authors = [{ name = "Taimoor Karim" }]

dependencies = ["numpy>=1.26", "scikit-learn>=1.4"]

[project.optional-dependencies]
serve = ["fastapi>=0.110", "uvicorn[standard]>=0.29", "pydantic>=2.6"]
claude = ["anthropic>=0.40"]
dev = ["pytest>=8.0", "httpx>=0.27"]
all = ["nlpsvc[serve,claude,dev]"]

[project.scripts]
nlpsvc-benchmark = "nlpsvc.benchmark:main"

[tool.hatch.build.targets.wheel]
packages = ["src/nlpsvc"]
